# Frostveil

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml  server.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: USAGE.md
modules/: analyzer.py  anti_forensics.py  autofill.py  bookmarks.py  cache_forensics.py  cloud_accounts.py  compromised_creds.py  cookies.py  credentials.py  crypto.py  downloads.py  dpapi_offline.py  engine.py  export_formats.py  extensions.py  favicon_forensics.py  fingerprint.py  history.py  hsts.py  html_report.py  ioc_engine.py  localstorage.py  media_history.py  network_recon.py  opsec.py  password_audit.py  pdf_report.py  pii_scanner.py  plugin_manager.py  preference_mining.py  report.py  searches.py  session_hijack.py  sessions.py  site_engagement.py  utils.py  visited_links.py  wal_forensics.py  windows_artifacts.py
plugins/: example_plugin.py
tests/: test_cloud_accounts.py  test_crypto.py  test_ioc_engine.py  test_password_audit.py  test_pii_scanner.py  test_session_hijack.py
ui/: app.js  index.html  style.css
