[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frostveil"
version = "2.1.0"
description = "Advanced browser forensics, credential extraction, and threat analysis toolkit"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Frostveil Contributors"},
]
keywords = [
    "forensics", "browser", "dfir", "penetration-testing", "security",
    "chromium", "firefox", "cookies", "credentials", "threat-intelligence",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Forensics",
]

[project.urls]
Homepage = "https://github.com/dbeglaryan/Frostveil"
Repository = "https://github.com/dbeglaryan/Frostveil"
Issues = "https://github.com/dbeglaryan/Frostveil/issues"
Documentation = "https://github.com/dbeglaryan/Frostveil/wiki"

[project.scripts]
frostveil = "main:main"
frostveil-dashboard = "server:main"

[tool.setuptools]
packages = ["modules", "plugins"]
py-modules = ["main", "server"]

[tool.setuptools.package-data]
"*" = ["ui/*.html", "ui/*.css", "ui/*.js", "plugins/*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
